--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -108,36 +108,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5923d38-ff44-4d4f-a58e-9c3b2624e0d3",
-   "metadata": {},
-   "source": [
-    "### Observations\n",
-    "\n",
-    "- Feature 2: Showing an interesting trend\n",
-    "- Feature 3: Almost all NaN values \n",
-    "- Feature 5 and 6: boolean\n",
-    "- Feature 7: discrete values in cluster\n",
-    "- Feature 8: discrete values range from 2-5\n",
-    "\n",
-    "##### Pairplot observations \n",
-    "- Feature 1 and y: Increasing in Feature 1 deacreses y\n",
-    "- Similar for Feature 2\n",
-    "- Feature 9: Increasing trend\n",
-    "\n",
-    "Relavant features so far:\n",
-    "- Feature 1, Feature 2, Feature 7-9\n",
-    "\n",
-    "- Three main data types: Numeric, Categorical, Ordinal"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "aa57b675-077a-4469-98f3-6a950053e69d",
    "metadata": {},
    "source": [
-    "1) We want to separate the data from the analysis.\n",
-    "2) We want to be able to automate our analysis. \n",
-    "3) We want our analysis to be repoudicble."
+    "1) Separate the data from the analysis.\n",
+    "2) Be able to automate our analysis. \n",
+    "3) We want our analysis to be reproducible."
    ]
   },
   {
